--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
+        <meta charset="utf8" />
+        <meta http-equiv="X-UA-Compatible" content="IE-edge"/>
+        <meta name="viewport"content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style/main.css">
+        <link rel="stylesheet" type="text.css" href="style/main.css">
 </head>
 <body>
-    <div class="grid-container">
-        <div class="grid-item">სექცია</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>  
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>  
+<header>
+<div class="flou"> 
+  <div class="img">
+    <img src="images/logo.png" alt="logo"></div>
+  <div class="grid-container">
+      <div class="grid-item"> მთავარი </div>
+      <div class="grid-item"> ჩვენ.შესახებ </div>
+      <div class="grid-item"> სერვისები </div>  
+      <div class="grid-item"> პროექტები </div>
+      <div class="grid-item"> პარტნიორები</div>
+      <button> კონტაქტი </button>
+      <div class="flex">
+        <img src=""
+
       </div>
-    
+  </div>
+</div>
+</header>
 </body>
 </html>
+
+
