change index.html ant add footer

--- a/index.html
+++ b/index.html
@@ -20,11 +20,29 @@
       <div class="grid-item"> პარტნიორები</div>
       <button> კონტაქტი </button>
       <div class="flex">
-        <img src=""
-
+        <img src="images/photo.png" alt="photo" width="1200"></div>
       </div>
+      </div>
+</header>
+<div class="next">
+		<h2> კონტაქტი </h2>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+    <div class="grids-container">
+      <div> სახელი,გვარი </div>
+      <div> ელ.ფოსტა </div>
+      <div> ტელეფონის ნომერი </div>  
+      <div> შეტყობინება </div>
+      </div>
+		 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46287.91228702968!2d44.793000316694666!3d41.72557429831502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd7e64f626b%3A0x61d084ede2576ea3!2sTbilisi!5e0!3m2!1sen!2sge!4v1637572945973!5m2!1sen!2sge" width="400" height="200" style="margin:90px;" allowfullscreen="" loading="lazy"></iframe>
+		</p>
   </div>
-</div>
 </header>
 </body>
 </html>
